Fix SonarQube issues (1)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>